--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Priyanuj Dey",
+    "name": "Priyanuj Dey | Portfolio",
     "icons": [{
             "src": "\/android-icon-36x36.png",
             "sizes": "36x36",
